feat: glob and cp, but glob is unsafe

--- a/spago.yaml
+++ b/spago.yaml
@@ -39,10 +39,11 @@ package:
       - assert
       - spec-node
       - spec-discovery
+      - debug
 
 workspace:
   packageSet:
-    registry: 60.4.0
+    registry: 60.5.0
   extraPackages:
     node-fs:
       path: /home/srghma/projects/purescript-node-fs
